--- a/index.html
+++ b/index.html
@@ -25,7 +25,60 @@
         <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
       </div>
       <section class="main--tables-container">
-        <div></div>
+        <div class="main--currency-table">
+          <p class="currency-table--title table__title-primary">Monedas</p>
+          <div class="currency-table--container">
+            <table>
+              <tr>
+                <td class="table__top-left">Bitcoin</td>
+                <td class="table__top-right table__right">$1.96 <span class="down"></span></td>
+              </tr>
+              <tr>
+                <td>Ethereum</td>
+                <td class="table__right">$ 0.07 <span class="up"></span></td>
+              </tr>
+              <tr>
+                <td>Ripple</td>
+                <td class="table__right">$ 0.07 <span class="down"></span></td>
+              </tr>
+              <tr>
+                <td class="table__bottom-left">Stellar</td>
+                <td class="table__bottom-right table__right">$ 4.96 <span class="down"></span></td>
+              </tr>
+            </table>
+          </div>
+          <div class="currency-table--date">
+            <p><b>Actualizado:</b> 19 Julio 23:45</p>
+          </div>
+        </div>
+      </section>
+      <section class="main--tables-container">
+        <div class="main--currency-table">
+          <p class="currency-table--title table__title-secondary">Comisiones</p>
+          <div class="currency-table--container">
+            <table>
+              <tr>
+                <td class="table__top-left">Bitrade</td>
+                <td class="table__top-right table__right">$ 12.96 <span></span></td>
+              </tr>
+              <tr>
+                <td>Bitpreco</td>
+                <td class="table__right">$ 13.07 <span></span></td>
+              </tr>
+              <tr>
+                <td>Novadax</td>
+                <td class="table__right">$ 13.15 <span></span></td>
+              </tr>
+              <tr>
+                <td class="table__bottom-left">Coinext</td>
+                <td class="table__bottom-right table__right">$ 14.96 <span></span></td>
+              </tr>
+            </table>
+          </div>
+          <div class="currency-table--date">
+            <p><b>Actualizado:</b> 19 Julio 23:45</p>
+          </div>
+        </div>
       </section>
     </section>
     <section></section>
