break points the media query

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Mobile First</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 700px)">
+  <link rel="stylesheet" href="./css/pc.css" media="(min-width: 930px)">
 </head>
 <body>
   <header>
@@ -51,8 +53,6 @@
             <p><b>Actualizado:</b> 19 Julio 23:45</p>
           </div>
         </div>
-      </section>
-      <section class="main--tables-container">
         <div class="main--currency-table">
           <p class="currency-table--title table__title-secondary">Comisiones</p>
           <div class="currency-table--container">
